@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1280</width>
+    <width>1312</width>
     <height>689</height>
    </rect>
   </property>
@@ -646,6 +646,9 @@ p, li { white-space: pre-wrap; }
              <property name="editTriggers">
               <set>QAbstractItemView::NoEditTriggers</set>
              </property>
+             <property name="alternatingRowColors">
+              <bool>true</bool>
+             </property>
              <property name="selectionMode">
               <enum>QAbstractItemView::SingleSelection</enum>
              </property>
@@ -656,7 +659,7 @@ p, li { white-space: pre-wrap; }
               <bool>false</bool>
              </property>
              <property name="columnCount">
-              <number>4</number>
+              <number>5</number>
              </property>
              <attribute name="horizontalHeaderStretchLastSection">
               <bool>true</bool>
@@ -677,6 +680,11 @@ p, li { white-space: pre-wrap; }
              <column>
               <property name="text">
                <string>File Size</string>
+              </property>
+             </column>
+             <column>
+              <property name="text">
+               <string>Date</string>
               </property>
              </column>
              <column>
