@@ -2,7 +2,7 @@
 
 # Form implementation generated from reading ui file '/home/eoyilmaz/Documents/development/oyProjectManager/oyProjectManager/ui/version_creator.ui'
 #
-# Created: Fri Mar 23 16:34:29 2012
+# Created: Fri Mar 30 10:34:20 2012
 #      by: PyQt4 UI code generator 4.8.5
 #
 # WARNING! All changes made in this file will be lost!
@@ -18,7 +18,7 @@ class Ui_Dialog(object):
     def setupUi(self, Dialog):
         Dialog.setObjectName(_fromUtf8("Dialog"))
         Dialog.setWindowModality(QtCore.Qt.ApplicationModal)
-        Dialog.resize(1280, 689)
+        Dialog.resize(1312, 689)
         sizePolicy = QtGui.QSizePolicy(QtGui.QSizePolicy.Preferred, QtGui.QSizePolicy.Preferred)
         sizePolicy.setHorizontalStretch(1)
         sizePolicy.setVerticalStretch(1)
@@ -352,10 +352,11 @@ class Ui_Dialog(object):
         self.verticalLayout_7.addLayout(self.horizontalLayout_10)
         self.previous_versions_tableWidget = QtGui.QTableWidget(self.previous_versions_groupBox)
         self.previous_versions_tableWidget.setEditTriggers(QtGui.QAbstractItemView.NoEditTriggers)
+        self.previous_versions_tableWidget.setAlternatingRowColors(True)
         self.previous_versions_tableWidget.setSelectionMode(QtGui.QAbstractItemView.SingleSelection)
         self.previous_versions_tableWidget.setSelectionBehavior(QtGui.QAbstractItemView.SelectRows)
         self.previous_versions_tableWidget.setShowGrid(False)
-        self.previous_versions_tableWidget.setColumnCount(4)
+        self.previous_versions_tableWidget.setColumnCount(5)
         self.previous_versions_tableWidget.setObjectName(_fromUtf8("previous_versions_tableWidget"))
         self.previous_versions_tableWidget.setRowCount(0)
         item = QtGui.QTableWidgetItem()
@@ -368,8 +369,11 @@ class Ui_Dialog(object):
         item.setText(QtGui.QApplication.translate("Dialog", "File Size", None, QtGui.QApplication.UnicodeUTF8))
         self.previous_versions_tableWidget.setHorizontalHeaderItem(2, item)
         item = QtGui.QTableWidgetItem()
-        item.setText(QtGui.QApplication.translate("Dialog", "Note", None, QtGui.QApplication.UnicodeUTF8))
+        item.setText(QtGui.QApplication.translate("Dialog", "Date", None, QtGui.QApplication.UnicodeUTF8))
         self.previous_versions_tableWidget.setHorizontalHeaderItem(3, item)
+        item = QtGui.QTableWidgetItem()
+        item.setText(QtGui.QApplication.translate("Dialog", "Note", None, QtGui.QApplication.UnicodeUTF8))
+        self.previous_versions_tableWidget.setHorizontalHeaderItem(4, item)
         self.previous_versions_tableWidget.horizontalHeader().setStretchLastSection(True)
         self.previous_versions_tableWidget.verticalHeader().setStretchLastSection(False)
         self.verticalLayout_7.addWidget(self.previous_versions_tableWidget)
@@ -428,4 +432,5 @@ class Ui_Dialog(object):
         item = self.previous_versions_tableWidget.horizontalHeaderItem(1)
         item = self.previous_versions_tableWidget.horizontalHeaderItem(2)
         item = self.previous_versions_tableWidget.horizontalHeaderItem(3)
+        item = self.previous_versions_tableWidget.horizontalHeaderItem(4)
 
