@@ -46,11 +46,17 @@ Version History
 * ``version_creator`` ui now displays the file size of the previous versions,
   and will not display the full path of the them anymore.
 
-* added ``thumbnail_format`` to the config and ``version_creator`` now uses
+* Added ``thumbnail_format`` to the config and ``version_creator`` now uses
   the specified format.
 
-* fixed ``nukeEnv.py`` now it is properly opening
+* Fixed ``nukeEnv.py`` now it is properly opening
   :class:`~oyProjectManager.core.models.Version`\ s.
+  
+* There is now two new settings in the config for time and date formatting of
+  previous versions.
+
+* ``version_creator`` now displays the modification time of the previous
+  versions.
 
 0.2.2
 -----
